#351 Update metadata to be compatible with Java 17